# printspots

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  Readme.md
.github/workflows/: build.yml
cli/: Cargo.toml  Readme.md
cli/src/: cli.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  mesh.rs  utils.rs
crates/core/src/grayscale/: calibration.rs  generate.rs  image_processing.rs  mod.rs  tests.rs
gui/: README.md  package-lock.json  package.json  tailwind.config.js
gui/src/: App.vue  main.js  router.js
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: commands.rs  commands_append.rs  lib.rs  main.rs
gui/src/assets/: printspots.css
gui/src/components/: Calibration.vue  Configure.vue  Generation.vue  Logo.vue  PrinterProfileForm.vue  Welcome.vue
gui/src/components/dashboard/: ProjectEmptyState.vue  TopBar.vue
gui/src/components/editor/: CompletionScreen.vue  ImageCanvas.vue  ProjectEditor.vue  SplitLayout.vue
gui/src/components/modals/: PaletteNameModal.vue  ProjectConfigModal.vue
gui/src/components/onboarding/: PaletteGenerationForm.vue  PrinterConfigForm.vue
gui/src/components/palette/: Button.vue  ColorPalette.vue  GrayscaleCalibration.vue  Grid.vue  GridControls.vue  ImageToolbar.vue  OutputPanel.vue  Uploader.vue
gui/src/stores/: palette.js  printerProfile.js  project.js
gui/src/views/: AddPalette.vue  AddPrinter.vue  OnboardingWizard.vue  ProjectDashboard.vue
