[workspace]
members = [
    "crates/core",
    "cli",
    "gui/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Petr Gadorek <hahihula@gmail.com>"]
repository = "https://gitlab.com/printspots/printspots"

[workspace.dependencies]
# Shared dependencies with versions
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.145"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
image = "0.25.8"
ron = "0.11.0"
toml = "0.9.7"
dirs = "6.0"
dialoguer = "0.12"

# Internal crates
printspots-core = { path = "crates/core" }