[package]
name = "printspots-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "printspots"
path = "src/main.rs"

[dependencies]
printspots-core.workspace = true
clap = { version = "4.0", features = ["derive"] }
anyhow.workspace = true
image.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
toml.workspace = true
ron.workspace = true
dirs.workspace = true
dialoguer.workspace = true