[package]
name = "printspots"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "printspots_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
printspots-core.workspace = true
anyhow.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs.workspace = true
image.workspace = true
tauri-plugin-dialog = "2.4.2"
base64 = "0.22"

